--- a/view/public/inqlude.css
+++ b/view/public/inqlude.css
@@ -1,6 +1,7 @@
 body {
   background-color: yellowgreen;
   margin: 0px;
+  font-family: 'Droid Sans', arial, serif;
 }
 
 .center {
@@ -31,11 +32,6 @@ h1 .subtitle {
   padding-left: 12px;
 }
 
-ul {
-  margin-top: 0px;
-  margin-bottom: 0px;
-}
-
 .header {
   width: 80%;
   background-color: white;
@@ -59,5 +55,6 @@ table {
 }
 
 td {
-  padding-right: 8px;
+  vertical-align: top;
+  padding-left: 16px;
 }
