Show home page link.

--- a/view/library.html.haml
+++ b/view/library.html.haml
@@ -14,12 +14,12 @@
       %span.subtitle
         The Qt library archive
 
-  .menu
+  .menu.center
 
   .content.center
     %h2
       = m "name"
-
+  
     %p
       %em
         Version
@@ -30,3 +30,6 @@
 
     %p
       = m "description"
+
+    %p
+      = link m( "homepage" )
