--- a/view/library.html.haml
+++ b/view/library.html.haml
@@ -15,6 +15,12 @@
         The Qt library archive
 
   .menu.center
+    %span.menu_items
+      = link_to "How to get libraries", "get"
+      |
+      = link_to "How to contribute", "contribute"
+      |
+      = link_to "About", "about"
 
   .content.center
     %h2
