Add generation date in the footer.

--- a/view/layout.html.haml
+++ b/view/layout.html.haml
@@ -25,3 +25,11 @@
 
   .content.center
     = yank
+
+    %hr
+
+    %span.footer
+      %em
+        Last updated on #{Date.today}
+
+    %br{ :clear => "all" }
