Adapt to changed repository name.

--- a/view/contribute.html.haml
+++ b/view/contribute.html.haml
@@ -7,12 +7,12 @@
   packages.
 %p
   The meta data used by Inqlude is collected in a git repository at
-  = link( "http://github.com/cornelius/inqlude_data" ) + "."
+  = link( "http://github.com/cornelius/inqlude-data" ) + "."
   It contains a manifest file in JSON format for each library, which has the
   meta data in a structured machine-readable form. JSON is easy enough for
   humans to read and edit as well.
 %p
-  You can contribute meta data by providing patches to the inqlude_data
+  You can contribute meta data by providing patches to the inqlude-data
   repository. Use the github mechanisms or just send patches by email.
   Contributions are welcome.
 
