--- a/view/layout.html.haml
+++ b/view/layout.html.haml
@@ -1,6 +1,8 @@
 %head
   = style_sheet
   <link href='http://fonts.googleapis.com/css?family=Droid+Sans' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" href="http://www.google.com/cse/style/look/default.css" type="text/css" />
+  <script src="http://www.google.com/jsapi" type="text/javascript"></script>
 %body
   .header.center
     %h1
@@ -23,6 +25,9 @@
       |
       = link_to "About", "about"
 
+    #cse-search-form Loading
+
+      
   .content.center
     = yank
 
@@ -33,3 +38,13 @@
         Last updated on #{Date.today}
 
     %br{ :clear => "all" }
+
+  :javascript
+    google.load('search', '1', {language : 'en'});
+    google.setOnLoadCallback(function() {
+      var customSearchControl = new google.search.CustomSearchControl('012526638842992167133:g7thmrlp2uw');
+      customSearchControl.setResultSetSize(google.search.Search.FILTERED_CSE_RESULTSET);
+      var options = new google.search.DrawOptions();
+      options.enableSearchboxOnly("search.html");
+      customSearchControl.draw('cse-search-form', options);
+    }, true);
