Support additional custom URLs.

--- a/view/library.html.haml
+++ b/view/library.html.haml
@@ -27,6 +27,7 @@
     = link_item "readme", "README"
     = link_item "tutorial", "Tutorial"
     = link_item "vcs", "Source code repository"
+    = custom_urls
 
 %p{:class => "edit-link"}
   = link_to "[Edit]", editor_url
