--- a/view/library.html.haml
+++ b/view/library.html.haml
@@ -26,6 +26,7 @@
     = link_item "api_docs", "API documentation"
     = link_item "readme", "README"
     = link_item "tutorial", "Tutorial"
+    = link_item "download", "Download source"
     = link_item "vcs", "Source code repository"
     = custom_urls
 
