Add alpha ribbon.

--- a/view/layout.html.haml
+++ b/view/layout.html.haml
@@ -4,6 +4,9 @@
   <link rel="stylesheet" href="http://www.google.com/cse/style/look/default.css" type="text/css" />
   <script src="http://www.google.com/jsapi" type="text/javascript"></script>
 %body
+  .ribbon
+    = link_to "Alpha", "about"
+
   .header.center
     %h1
       %span.logo><
