--- a/view/library.html.haml
+++ b/view/library.html.haml
@@ -6,6 +6,9 @@
     Version
     = m "version"
     = "(#{m "maturity"})"
+    - if !old_versions.empty?
+      %span{:class => "old-versions"}
+        = "(older versions: #{old_versions.join(", ")})"
 
 %p
   = m "summary"
