Add short intro at the top of the home page.

--- a/view/index.html.haml
+++ b/view/index.html.haml
@@ -1,3 +1,18 @@
+%p
+  The goal of Inqlude is to provide a comprehensive listing of all
+  existing libraries for developers of Qt applications. If you are creating
+  applications using the Qt toolkit, and are looking for libraries, components
+  or modules to use, Inqlude is the place where you find all information and
+  pointers to get started.
+%p
+  This is a young project, we are still collecting information, and are
+  building up the web site and the tools around it. If you would like to get
+  involved, read more about #{link_to "how to contribute", "contribute"}, or go
+  to the mailing list #{link_to "inqlude.kde.org", "mailto:inqlude.kde.org"} to
+  directly talk to us. See you there.
+
+%h2 All libraries
+
 %table
   - libraries.each do |library|
     %tr
