--- a/view/public/inqlude.css
+++ b/view/public/inqlude.css
@@ -55,6 +55,10 @@ h1 .subtitle {
   padding-left: 12px;
 }
 
+h2 {
+  text-align: center;
+}
+
 .header {
   width: 80%;
   background-color: white;
