--- a/view/about.html.haml
+++ b/view/about.html.haml
@@ -1,21 +1,28 @@
 %p
-  Inqlude is the independent archive of Qt based libraries. Its mission is
-  to make it as easy as possible for developers using Qt to find and use
-  libraries, in particular 3rd party ones.
+  The goal of Inqlude is to provide a comprehensive listing of all
+  existing libraries for developers of Qt applications. If you are creating
+  applications using the Qt toolkit, and are looking for libraries, components
+  or modules to use, Inqlude is the place where you find all information and
+  pointers to get started.
 %p
   Inqlude comes with a command line client for handling libraries. See the
   = link_to "instructions how to get libraries", "get"
   for more details.
 %p
-  Inqlude tries to be a complete archive of all available Qt based
+  Inqlude aims to be a complete archive of all available Qt based
   libraries. If you notice that there is some information missing, outdated
   or inaccurate, please consider contributing the missing data. See the
   = link_to "instructions how to contribute", "contribute"
   for more details.
 %p
   %em
-    Note that Inqlude is currently a proof-of-concept. It's not ready for
-    production use yet. Feedback and input is appreciated.
+    Note that Inqlude is currently in alpha state. It's not ready for full
+    production use yet. Data is still incomplete, and the tools are
+    limited. Feedback and input is appreciated.
 %p
-  If you have questions of comments please feel free to contact
-  = link_to( "Cornelius Schumacher", "mailto:schumacher@kde.org" ) + "."
+  If you have questions of comments please feel free to write to the Inqlude
+  mailing list #{link_to "inqlude@kde.org", "mailto:inqlude@kde.org"}.
+%p
+  Inqlude was created by
+  = link_to "Cornelius Schumacher", "mailto:schumacher@kde.org"
+  with the help of many others, and is a proud  member of the KDE family.
