--- a/view/contribute.html.haml
+++ b/view/contribute.html.haml
@@ -30,3 +30,9 @@
   package systems on the variety of Linux distributions and other systems
   out there.
 
+%h2 Mailing list
+
+%p
+  If you want to discuss any aspects of Inqlude, get in contact to us, have
+  questions, or want to contribute in any other way, the best way is to use the
+  mailing list #{link_to "inqlude@kde.org", "mailto:inqlude@kde.org"}.
