--- a/view/get.html.haml
+++ b/view/get.html.haml
@@ -3,8 +3,9 @@
   based libraries in her projects.
 %p
   First you can just use the web site. Find the information about libraries
-  here, and get the libraries manually with the provided links. This works,
-  but there is a more convenient way.
+  here, and get the libraries using the provided links. This works and is the
+  recommended way for now, but there is an experimental, but more convenient
+  way.
 %p
   You can also use the command line client. This client makes it easy to get
   the libraries you need with just a few commands, without having to know
@@ -27,7 +28,7 @@
 
   install a library with 
   .code
-    inqlude install <library_name>
+    inqlude install &lt;library_name&gt;
 
   and get a list of installed libraries with
   .code
