--- a/view/layout.html.haml
+++ b/view/layout.html.haml
@@ -2,7 +2,8 @@
   = style_sheet
   <link href='http://fonts.googleapis.com/css?family=Droid+Sans' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="http://www.google.com/cse/style/look/default.css" type="text/css" />
-  <script src="http://www.google.com/jsapi" type="text/javascript"></script>
+  - if enable_search
+    <script src="http://www.google.com/jsapi" type="text/javascript"></script>
 %body
   .ribbon
     = link_to "Alpha", "about"
@@ -28,7 +29,8 @@
       |
       = link_to "About", "about"
 
-    #cse-search-form Loading
+    - if enable_search
+      #cse-search-form Loading...
 
       
   .content.center
@@ -42,12 +44,13 @@
 
     %br{ :clear => "all" }
 
-  :javascript
-    google.load('search', '1', {language : 'en'});
-    google.setOnLoadCallback(function() {
-      var customSearchControl = new google.search.CustomSearchControl('012526638842992167133:g7thmrlp2uw');
-      customSearchControl.setResultSetSize(google.search.Search.FILTERED_CSE_RESULTSET);
-      var options = new google.search.DrawOptions();
-      options.enableSearchboxOnly("#{root}search.html");
-      customSearchControl.draw('cse-search-form', options);
-    }, true);
+  - if enable_search
+    :javascript
+      google.load('search', '1', {language : 'en'});
+      google.setOnLoadCallback(function() {
+        var customSearchControl = new google.search.CustomSearchControl('012526638842992167133:g7thmrlp2uw');
+        customSearchControl.setResultSetSize(google.search.Search.FILTERED_CSE_RESULTSET);
+        var options = new google.search.DrawOptions();
+        options.enableSearchboxOnly("#{root}search.html");
+        customSearchControl.draw('cse-search-form', options);
+      }, true);
