--- a/view/layout.html.haml
+++ b/view/layout.html.haml
@@ -44,6 +44,12 @@
 
     %br{ :clear => "all" }
 
+  .legal
+    Inqlude is a
+    = link_to "KDE project", "http://kde.org"
+    = "|"
+    = link_to "Legal", "http://www.kde.org/community/whatiskde/impressum.php"
+
   - if enable_search
     :javascript
       google.load('search', '1', {language : 'en'});
