Link to mailman page.

--- a/view/contribute.html.haml
+++ b/view/contribute.html.haml
@@ -35,4 +35,4 @@
 %p
   If you want to discuss any aspects of Inqlude, get in contact to us, have
   questions, or want to contribute in any other way, the best way is to use the
-  mailing list #{link_to "inqlude@kde.org", "mailto:inqlude@kde.org"}.
+  mailing list #{link_to "inqlude@kde.org", "https://mail.kde.org/mailman/listinfo/inqlude"}.
