--- a/view/index.html.haml
+++ b/view/index.html.haml
@@ -8,8 +8,9 @@
   This is a young project, we are still collecting information, and are
   building up the web site and the tools around it. If you would like to get
   involved, read more about #{link_to "how to contribute", "contribute"}, or go
-  to the mailing list #{link_to "inqlude.kde.org", "mailto:inqlude.kde.org"} to
-  directly talk to us. See you there.
+  to the mailing list
+  = link_to "inqlude.kde.org", "https://mail.kde.org/mailman/listinfo/inqlude"
+  to directly talk to us. See you there.
 
 %h2 All libraries
 
