--- a/view/layout.html.haml
+++ b/view/layout.html.haml
@@ -1,4 +1,6 @@
+!!!
 %head
+  %meta{ :charset => 'utf-8' }
   = style_sheet
   - if enable_search
     <link href='http://fonts.googleapis.com/css?family=Droid+Sans' rel='stylesheet' type='text/css'>
