More exact label for download URL.

--- a/view/library.html.haml
+++ b/view/library.html.haml
@@ -31,7 +31,7 @@
     = link_item "api_docs", "API documentation"
     = link_item "readme", "README"
     = link_item "tutorial", "Tutorial"
-    = link_item "download", "Download source"
+    = link_item "download", "Download sources"
     = link_item "vcs", "Source code repository"
     = custom_urls
 
