Add announcement URL.

--- a/view/library.html.haml
+++ b/view/library.html.haml
@@ -34,6 +34,7 @@
     = link_item "tutorial", "Tutorial"
     = link_item "download", "Download sources"
     = link_item "vcs", "Source code repository"
+    = link_item "announcement", "Announcement"
     = custom_urls
 
 - if m("packages") && m( "packages", "source" )
