Link to Qt project.

--- a/view/index.html.haml
+++ b/view/index.html.haml
@@ -1,7 +1,8 @@
 %p
   The goal of Inqlude is to provide a comprehensive listing of all
   existing libraries for developers of Qt applications. If you are creating
-  applications using the Qt toolkit, and are looking for libraries, components
+  applications using the #{link_to "Qt toolkit", "http://qt-project.org"}, and
+  are looking for libraries, components
   or modules to use, Inqlude is the place where you find all information and
   pointers to get started.
 %p
