Add KDE repositories.

--- a/view/contribute.html.haml
+++ b/view/contribute.html.haml
@@ -7,7 +7,9 @@
   packages.
 %p
   The meta data used by Inqlude is collected in a git repository at
-  = link( "http://github.com/cornelius/inqlude-data" ) + "."
+  = link( "http://github.com/cornelius/inqlude-data" )
+  or
+  = link( "https://projects.kde.org/projects/kdesupport/inqlude-data" ) + "."
   It contains a manifest file in JSON format for each library, which has the
   meta data in a structured machine-readable form. JSON is easy enough for
   humans to read and edit as well.
@@ -20,7 +22,9 @@
 
 %p
   The command line tool is developed in another git repository at
-  = link( "http://github.com/cornelius/inqlude" ) + "."
+  = link( "http://github.com/cornelius/inqlude" )
+  or
+  = link( "https://projects.kde.org/projects/kdesupport/inqlude" ) + "."
   It's still in a proof-of-concept state, so there is quite a bit work left.
   Have a look at the
   = link_to "list of open issues", "http://github.com/cornelius/inqlude/issues"
