List all development versions.
Not only list bleeding edge libraries, but also alpha and beta
libraries. To cover that in a more generic way the edge.html page
is now the development.html page and lists all not yet completely
stable libraries.

--- a/view/development.html.haml
+++ b/view/development.html.haml
@@ -1,5 +1,27 @@
 %h2 Development versions | #{link_to "Stable libraries", "index"}
 
+%h3 Beta
+
+%table
+  - libraries(:beta).each do |library|
+    %tr
+      %td.first
+        = link_to_manifest library.name
+      %td.last
+        = library.manifests.last["summary"]
+
+%h3 Alpha
+
+%table
+  - libraries(:alpha).each do |library|
+    %tr
+      %td.first
+        = link_to_manifest library.name
+      %td.last
+        = library.manifests.last["summary"]
+
+%h3 Bleeding edge
+
 %table
   - libraries(:edge).each do |library|
     %tr
