--- a/view/index.html.haml
+++ b/view/index.html.haml
@@ -13,7 +13,7 @@
   = link_to "inqlude.kde.org", "https://mail.kde.org/mailman/listinfo/inqlude"
   to directly talk to us. See you there.
 
-%h2 Stable libraries | #{link_to "Development versions", "edge"}
+%h2 Stable libraries | #{link_to "Development versions", "development"}
 
 %table
   - libraries(:stable).each do |library|
