--- a/view/contribute.html.haml
+++ b/view/contribute.html.haml
@@ -37,6 +37,6 @@
 %h2 Mailing list
 
 %p
-  If you want to discuss any aspects of Inqlude, get in contact to us, have
+  If you want to discuss any aspects of Inqlude, get in contact with us, have
   questions, or want to contribute in any other way, the best way is to use the
   mailing list #{link_to "inqlude@kde.org", "https://mail.kde.org/mailman/listinfo/inqlude"}.
