Implement creation and display of generic manifests.
Generic manifests don't have release information and are used to
describe unreleased libraries.

--- a/view/development.html.haml
+++ b/view/development.html.haml
@@ -1,4 +1,7 @@
-%h2 Development versions | #{link_to "Stable libraries", "index"}
+%h2
+  Development versions
+  | #{link_to "Stable libraries", "index"}
+  | #{link_to "Unreleased", "unreleased"}
 
 %h3 Beta
 
