--- a/view/index.html.haml
+++ b/view/index.html.haml
@@ -13,7 +13,10 @@
   = link_to "inqlude.kde.org", "https://mail.kde.org/mailman/listinfo/inqlude"
   to directly talk to us. See you there.
 
-%h2 Stable libraries | #{link_to "Development versions", "development"}
+%h2
+  Stable libraries
+  | #{link_to "Development versions", "development"}
+  | #{link_to "Unreleased", "unreleased"}
 
 %table
   - libraries(:stable).each do |library|
