--- a/view/library.html.haml
+++ b/view/library.html.haml
@@ -7,7 +7,8 @@
 %p
   = m "description"
 
-= list_attribute_content "Version", version_content
+- if m( "schema_type" ) == "release"
+  = list_attribute_content "Version", version_content
 = list_attribute "licenses"
 = list_attribute "platforms"
 = list_attribute "authors"
