Show commercial libraries in separate section.

--- a/view/development.html.haml
+++ b/view/development.html.haml
@@ -2,6 +2,7 @@
   Development versions
   | #{link_to "Stable libraries", "index"}
   | #{link_to "Unreleased", "unreleased"}
+  | #{link_to "Commercial", "commercial"}
 
 %h3 Beta
 
