--- a/view/index.html.haml
+++ b/view/index.html.haml
@@ -17,6 +17,7 @@
   Stable libraries
   | #{link_to "Development versions", "development"}
   | #{link_to "Unreleased", "unreleased"}
+  | #{link_to "Commercial", "commercial"}
 
 %table
   - libraries(:stable).each do |library|
