--- a/view/commercial.html.haml
+++ b/view/commercial.html.haml
@@ -1,15 +1,14 @@
 %h2
-  Unreleased libraries
+  Commercial
   | #{link_to "Stable libraries", "index"}
   | #{link_to "Development versions", "development"}
-  | #{link_to "Commercial", "commercial"}
+  | #{link_to "Unreleased", "unreleased"}
 
 %p
-  These libraries are under development, but don't have any official releases
-  yet.
+  Libraries which are available under a commercial license.
   
 %table
-  - unreleased_libraries.each do |library|
+  - commercial_libraries.each do |library|
     %tr
       %td.first
         = link_to_manifest library.name
