Add list of all libraries.

--- a/view/commercial.html.haml
+++ b/view/commercial.html.haml
@@ -3,6 +3,7 @@
   | #{link_to "Stable libraries", "index"}
   | #{link_to "Development versions", "development"}
   | #{link_to "Unreleased", "unreleased"}
+  | #{link_to "All", "all"}
 
 %p
   Libraries which are available under a commercial license.
