--- a/view/development.html.haml
+++ b/view/development.html.haml
@@ -3,6 +3,7 @@
   | #{link_to "Stable libraries", "index"}
   | #{link_to "Unreleased", "unreleased"}
   | #{link_to "Commercial", "commercial"}
+  | #{link_to "All", "all"}
 
 %h3 Beta
 
