--- a/view/index.html.haml
+++ b/view/index.html.haml
@@ -18,6 +18,7 @@
   | #{link_to "Development versions", "development"}
   | #{link_to "Unreleased", "unreleased"}
   | #{link_to "Commercial", "commercial"}
+  | #{link_to "All", "all"}
 
 %table
   - libraries(:stable).each do |library|
