--- a/view/unreleased.html.haml
+++ b/view/unreleased.html.haml
@@ -1,8 +1,9 @@
 %h2
-  Unreleased libraries
+  Unreleased
   | #{link_to "Stable libraries", "index"}
   | #{link_to "Development versions", "development"}
   | #{link_to "Commercial", "commercial"}
+  | #{link_to "All", "all"}
 
 %p
   These libraries are under development, but don't have any official releases
