Add command to create release manifests for KDE Frameworks

--- a/view/all.html.haml
+++ b/view/all.html.haml
@@ -15,10 +15,10 @@
       %td.first
         = link_to_manifest library.name
       %td.last
-        = library.manifests.last["summary"]
+        = library.latest_manifest["summary"]
         %span{"class" => "library-short-meta-data"}
-          - if library.manifests.last["schema_type"] == "generic"
+          - if library.latest_manifest["schema_type"] == "generic"
             (unreleased,
           - else
-            (#{library.manifests.last["maturity"]},
-          #{library.manifests.last["licenses"].join(", ")})
+            (#{library.latest_manifest["maturity"]},
+          #{library.latest_manifest["licenses"].join(", ")})
