--- a/view/group.html.haml
+++ b/view/group.html.haml
@@ -7,13 +7,13 @@
       %td.first
         = link_to_manifest library.name
       %td.last
-        = library.manifests.last["summary"]
+        = library.latest_manifest["summary"]
         %span{"class" => "library-short-meta-data"}
-          - if library.manifests.last["schema_type"] == "generic"
+          - if library.latest_manifest["schema_type"] == "generic"
             (unreleased,
           - else
-            (#{library.manifests.last["maturity"]},
-          #{library.manifests.last["licenses"].join(", ")})
+            (#{library.latest_manifest["maturity"]},
+          #{library.latest_manifest["licenses"].join(", ")})
 
 %p
   #{group.count} libraries listed in group #{group_title}.
