Only put timestamp on main page
The timestamp is redundant on the pages, because it's always the same.
Removing it makes the page a tiny bit simpler and makes diffs of
the generated HTML easier to review.

--- a/view/index.html.haml
+++ b/view/index.html.haml
@@ -27,3 +27,8 @@
         = link_to_manifest library.name
       %td.last
         = library.manifests.last["summary"]
+
+%hr
+
+%span.footer
+  Last updated on #{Date.today}
