--- a/view/library.html.haml
+++ b/view/library.html.haml
@@ -4,15 +4,14 @@
 %p
   = m "summary"
 
-%p
-  = m "description"
-
 - if m( "schema_type" ) == "release" || m( "schema_type" ) == "proprietary-release"
   = list_attribute_content "Version", version_content
 = list_attribute "licenses"
 = list_attribute "platforms"
 = list_attribute "authors"
 = list_attribute_content "Home page", link( m( "urls", "homepage" ) )
+
+= render_description
 
 - if more_urls?
   %h3 Read more
