--- a/view/index.html.haml
+++ b/view/index.html.haml
@@ -26,7 +26,7 @@
       %td.first
         = link_to_manifest library.name
       %td.last
-        = library.manifests.last["summary"]
+        = library.manifests.last.summary
 
 %hr
 
