--- a/view/unreleased.html.haml
+++ b/view/unreleased.html.haml
@@ -15,4 +15,4 @@
       %td.first
         = link_to_manifest library.name
       %td.last
-        = library.manifests.last["summary"]
+        = library.manifests.last.summary
