--- a/view/library.html.haml
+++ b/view/library.html.haml
@@ -4,7 +4,7 @@
 %p
   = m.summary
 
-- if m.schema_type == "release" || m.schema_type == "proprietary-release"
+- if m.has_version?
   = list_attribute_content "Version", version_content
 = list_attribute "licenses"
 = list_attribute "platforms"
